projeto social e andamento

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
+   <link rel="stylesheet" href="estilos/style.css">
     <title>Redes Socias</title>
 </head>
 <body>
-   
+   <main>
+
+     <section id="telefone">
+
+     </section>
+
+     <section id="redes-socias">
+
+     </section>
+   </main>
     
     
 </body>
