--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
     body{
         width: 100%vw;
         height: 100%vh;
-        background: black url('imagens/tela-home.jpg');
+        background: black url('./imagens/tela-home.jpg') no-repeat top center;
+        background-size: cover;
     }
 </style>
 <body>
