--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      </section>
 
      <section id="redes-socias">
-      <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a><br>
+      <a href="" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a><br>
       <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
       <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
       <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
